# Mix_Curry

./: .env  .env.example  .gitignore  ARCHITECTURE.md  COMPLETE_GOV_API_SETUP.md  CONFIG_IMPLEMENTATION_SUMMARY.md  EDM_SYSTEM_REFACTORING_SUMMARY.md  FLOW_DIAGRAM.md  FRONTEND_GUIDE.md  FRONTEND_INTEGRATION_GUIDE.md  GOV_API_INTEGRATION.md  NOTIFICATION_INTEGRATION_GUIDE.md  QUICKSTART_FRONTEND.md  README.md  SHARE_CREDENTIALS.md  SUPABASE_SETUP.md  UPGRADE_GUIDE.md  command.py  create_reviewer.py  create_test_user.py  database_schema.sql  diagnose_email_system.py  fix_system_settings.sql  main.py  pyproject.toml  quick_test_email.py  requirements.txt  test_api.py  test_api_v2.py  test_email_error.py  test_gmail_send.py  test_notification_system.py  test_send_email.py
app/: settings.py
app/models/: database.py  models.py
app/routers/: applications.py  auth.py  certificates.py  complete_flow.py  config.py  districts.py  documents.py  maps.py  notifications.py  photos.py  reviews.py  simplified_flow.py  users.py
app/services/: auth.py  bank_api.py  digital_id.py  digital_id_v2.py  edm.py  email_verification.py  google_maps.py  google_oauth.py  gov_wallet.py  notifications.py  storage.py
app/services/edm/: send_disaster_notification.py
app/services/edm/profiles/disaster/: client_secret.json  gmail_token.json
app/services/edm/templates/: approval_notification.html  rejection_notification.html
app/services/gmaillib/simplegmail/: __init__.py  gmail.py  message.py
docs/: ADDRESS_DISPLAY_COMPARISON.md  ADDRESS_EXTRACTION_OPTIMIZATION.md  ADMIN_DOCUMENT_PREVIEW.md  ADMIN_HISTORY_FEATURE.md  ADMIN_MAP_FEATURE_FIX.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CREDENTIAL_HISTORY_DEPLOYMENT_CHECKLIST.md  CREDENTIAL_HISTORY_FIX.md  CREDENTIAL_HISTORY_GUIDE.md  CREDENTIAL_HISTORY_IMPLEMENTATION.md  CREDENTIAL_HISTORY_RECORD_FIX.md  CREDENTIAL_HISTORY_SEARCH_OPTIMIZATION.md  CREDENTIAL_HISTORY_UI_IMPROVEMENTS.md  CREDENTIAL_HISTORY_UI_REFINEMENT.md  DOCUMENT_UPLOAD_INTEGRATION.md  EMAIL_AUTH_IMPROVEMENT.md  EMAIL_VERIFICATION_LOGIN_GUIDE.md  FINAL_MAP_SOLUTION.md  FRONTEND_EMAIL_AUTH_GUIDE.md  GOOGLE_LOGIN_DATA_FLOW.md  GOOGLE_LOGIN_FIX.md  GOOGLE_MAPS_IMPLEMENTATION_COMPLETE.md  GOOGLE_MAPS_INTEGRATION.md  GOOGLE_MAPS_SETUP_COMPLETE.md  GOOGLE_OAUTH_INTEGRATION.md  GOOGLE_OAUTH_QUICKSTART.md  HISTORY_TABLE_STYLE_FIX.md  LOADING_ANIMATION_INTEGRATION.md  LOADING_ANIMATION_TIMING_FIX.md  TIMEZONE_FIX_COMPLETE.md
https/: README.md  create_test_images.py  test.http
migration/: add_credential_history_table.sql  add_gov_api_fields.sql  database_schema.sql  drop_all_tables.sql  unified_schema.sql
static/: admin.html  admin.html.backup  applicant.html  applicant_backup_20251109_173128.html  applicant_history.html  applicant_old.html  config_test.html  digital_id_v2_demo.html  email_auth_test.html  email_verification_demo.html  google_login_test.html  google_maps_test.html  gov_api_demo.html  home.html  index.html  login.html  test_api.html
static/assets/: loading-animation.json
static/js/: admin-new-functions.js  config.js  dynamic-config.js  taiwan-districts.js
static/styles/: admin.css  applicant.css
tests/: create_reviewer.py  quick_test_email.py  test_complete_flow.py  test_complete_map_flow.py  test_credential_history.py  test_email_auth.py  test_email_verification_complete.py  test_google_maps.py  test_google_oauth.py  test_notification_system.py  test_send_email.py  test_users_me_endpoint.py
